--- a/src/կ/html/index.html
+++ b/src/կ/html/index.html
@@ -57,7 +57,7 @@
 
 		<p>
 			փորձում եմ փրկել աշխարը<br>
-			(կամ մահանալ պորձելիս):<br>
+			(կամ մահանալ փորցելիս):<br>
 		</p>
 
 
@@ -127,11 +127,11 @@
 				</li>
 				<li>
 					<a href="https://the-island-club.com" title="">the-island-club.com</a>
-					- Լիմասոլում շահույթ չհետապնդող աատկերասրահի կայք
+					- Լիմասոլում շահույթ չհետապնդող պատկերասրահի կայք
 				</li>
 				<li>
 					<a href="https://analogaffairs.com" title="">analogaffairs.com</a>
-					- իմ լենտային լուսանկարները
+					- իմ ժապավենային լուսանկարները
 				</li>
 				<li>
 					<a href="https://github.com/haykkh/domainer" title="">domain.er</a>
