--- a/src/կ/html/index.html
+++ b/src/կ/html/index.html
@@ -102,6 +102,10 @@
 			Ես սարգել եմ`
 			<ul>
 				<li>
+					<a href="https://kanach.consulting">kanach.consulting</a>
+					- ածխածնի խորհրդատվություն
+				</li>
+				<li>
 					<a href="https://hayk.earth/buchulator">hayk.earth/buchulator</a>
 					- կոմբուչայի բաղադրատոմսի հաշվիչ
 				</li>
@@ -184,6 +188,9 @@
 				</li>
 				<li>
 					<a href="https://linkedin.com/in/haykkh" title="">linkedin</a>
+				</li>
+				<li>
+					<a href="https://kanach.consulting">kanach.consulting</a>
 				</li>
 			</ul>
 		</section>
